syntax = "proto3";

option go_package = "./proto";

package greet_service;

service GreetService{
    rpc SayHello(NoParm) returns(HelloResponse) ;

    rpc SayHelloServerStreaming(NameList) returns (stream HelloResponse);

    rpc SayHelloClientStreaming(stream HelloRequst) returns (MessagesList);

    rpc SayHelloBidirectional(stream HelloRequst) returns (stream HelloResponse);

}

message NoParm{};

message HelloRequst{
    string name = 1;
}

message HelloResponse{
    string message = 1;
}

message NameList{
    repeated string names = 1;
}

message MessagesList{
    repeated string message = 1;
}